--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>For all your incorporated company needs</h2>
 
     <!-- First, create a form tag where our inputs will be nested -->
-      <form>
+      <form action="http://example.com/process-user.rb" method="post">
 
       <!-- Add a label for 'fullname'-->
         
