--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <form action="http://example.com/process-user.rb" method="post">
 
       <!-- Add a label for 'fullname'-->
-        
+        <label for="fullname">Please Enter Your Full Name:</label> 
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
 
