--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <label for="fullname">Please Enter Your Full Name:</label> 
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
-        
+        <input type="text" name="fullname" id="fullname" placeholder="Enter Name" required>
 
       <!-- Add a label for 'email'-->
-
+        <label for="email"
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
 
