--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <label for="email">Please enter your email:</label>
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
-
-
+        <input type="text" name="email" id="email" placeholder="Enter email" required>
+      
       <!-- Add a label for 'phone'-->
-
+        <label for="phone"
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
 
