--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <input type="text" name="email" id="email" placeholder="Enter email" required>
       
       <!-- Add a label for 'phone'-->
-        <label for="phone"
+        <label for="phone">Please enter your phone number:</label>
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
 
