--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <label for="phone">Please enter your phone number:</label>
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
-        <input type="tel" name="phone" 
+        <input type="tel" name="phone" id="phone" placeholder=""
 
       <!-- Add a label for 'message'-->
 
