--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <label for="phone">Please enter your phone number:</label>
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
-        <input type="tel" name="phone" id="phone" placeholder="Enter Telephone:" 
+        <input type="tel" name="phone" id="phone" placeholder="Enter Telephone:" (optional)>
 
       <!-- Add a label for 'message'-->
-
+        <label for="message"
       <!-- Add a textarea tag with the id and name attributes set to 'message' -->
       <!-- Include the place holder text "Enter Message" -->
 
