--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <label for="message">Message:</label>
       <!-- Add a textarea tag with the id and name attributes set to 'message' -->
       <!-- Include the place holder text "Enter Message" -->
-        <textarea name="message" id="message" 
+        <textarea name="message" id="message" placeholder=""
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
 
