Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
         <textarea name="message" id="message" placeholder="Enter Message:"></textarea>
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
-        <label 
+        <label for="newsletter">Check the box if you would like to receive our newsletter:</label>
+        <input type="checkbox" name="newsletter" value="newsletter"> 
 
 
       <!-- Add an input with the type set to 'submit' -->
+        
       </form>
     
   </body>
