--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
       <!-- Add an input with the type set to 'submit' -->
-        <input type=""
+        <input type="submit" 
       </form>
     
   </body>
