--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <label for="email">Please enter your email:</label>
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
-        <input type="text" name="email" id="email" placeholder="Enter email" required>
+        <input type="email" name="email" id="email" placeholder="Enter email" required>
       
       <!-- Add a label for 'phone'-->
         <label for="phone">Please enter your phone number:</label>
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
-        <input type="tel" name="phone" id="phone" placeholder="Enter Telephone:" (optional)>
+        <input type="tel" name="phone" id="phone" placeholder="Enter Telephone (optional)">
 
       <!-- Add a label for 'message'-->
         <label for="message">Message:</label>
