--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <label for="email">Please enter your email:</label>
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
-        <input type="email" name="email" id="email" placeholder="Enter email" required>
+        <input type="email" name="email" id="email" placeholder="Enter Email" required>
       
       <!-- Add a label for 'phone'-->
         <label for="phone">Please enter your phone number:</label>
